@@ -56,3 +56,9 @@ Recent revisions are added to the current versions logs under date/time info.
 	- Tab text alignment, close button detection bugs and scrollbar separator line painting are fixed (Thank to Unodgs).
 	- fixed autohide bug which caused the framework fall into an infinite loop when trying to hide a 2+ level nested tabs.
 
+2/21/2008
+	* from now on, default U++ chameleon skins are used for painting the dragbar background (in default and enhanced style)
+	  namely, from now on system colors applies to the Dockctrl dragbar. used skin samples are as following: 
+	  default 	skin = drawed using default TabCtrl style.
+	  enhanced 	skin = drawed using default ToolBar style.
+	  classic	skin = no special draw action (uses current system background).   
